fix z-index

--- a/app/assets/stylesheets/admin.scss
+++ b/app/assets/stylesheets/admin.scss
@@ -33,12 +33,12 @@ body{
     #logo{
       z-index: 1;
       cursor: pointer;
-      left:5px;
-      top:5px;
+      left:10px;
+      top:10px;
       position: absolute;
       img{
-        height:50px;
-        width:60px;
+        height:40px;
+        width:50px;
       }
     }
     #search{
