--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -32,18 +32,18 @@ body{
     border-bottom: 1px solid #dddddd;
     height:60px;
     #logo{
-      // z-index: 1;
+      z-index: 100;
       cursor: pointer;
-      left:5px;
-      top:5px;
+      left:10px;
+      top:10px;
       position: absolute;
       img{
-        height:50px;
-        width:60px;
+        height:40px;
+        width:50px;
       }
     }
     #search{
-      // z-index: 2;
+      z-index: 100;
       left:100px;
       position: absolute;
       width:auto;
@@ -69,7 +69,6 @@ body{
       }
     }
     #admin{
-      // z-index: 0;
       position: relative;
       width:auto;
       height:60px;
@@ -92,7 +91,7 @@ body{
     }
 
     #menu-login{
-      // z-index: 1;
+      z-index: 100;
       position: absolute;
       right:15px;
       top:12px;
@@ -109,6 +108,7 @@ body{
 }
 
 #bodyer{
+  position: relative;
   padding-top: 40px;
   .line{
     position: fixed;
@@ -126,7 +126,7 @@ body{
   }
 
   .article{
-    z-index: 9;
+    z-index: 5;
     width:80%;
     margin-top: 40px;
     margin-left: 7%;
@@ -136,7 +136,7 @@ body{
       clear: both;
     }
     .time-line{
-      z-index: 9;
+      z-index: 5;
       text-align: center;
       float:left;
       width:20%;
